# napari-quoll

./: .pre-commit-config.yaml  README.md  setup.cfg  tox.ini
.github/workflows/: test.yml  test_and_deploy.yml
.napari-hub/: DESCRIPTION.md
src/napari_quoll/: __init__.py  _widget.py  napari.yaml
src/napari_quoll/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
