[metadata]
name = napari-quoll
version = 0.0.1
description = Resolution estimation for electron tomography
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rosalindfranklininstitute/napari-quoll
author = Elaine Ho
author_email = Elaine.Ho@rfi.ac.uk
license = Apache-2.0
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/rosalindfranklininstitute/napari-quoll/issues
    Documentation = https://github.com/rosalindfranklininstitute/napari-quoll#README.md
    Source Code = https://github.com/rosalindfranklininstitute/napari-quoll
    User Support = https://github.com/rosalindfranklininstitute/napari-quoll/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    napari[all]
    qtpy
    quoll

python_requires = >=3.7
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-quoll = napari_quoll:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
